--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,38 @@
-/* HTML Tag Selectors */
+/* HTML Tags */
 body {
     color: #222831;
     background-color: #EEEEEE;
     font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 3rem;
+    line-height: 6rem;
+}
+
+h2 {
+    font-size: 2.25rem;
+    line-height: 2.7rem;
+}
+
+h4 {
+    font-size: 2rem;
+    line-height: 2.2rem;
+}
+
+p {
+    font-size: 1.1rem;
+    line-height: 1.65rem;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
 }
 
 a {
@@ -10,30 +40,39 @@ a {
     text-decoration: none;
 }
 
-i {
-    color: #00ADB5;
-}
-
 img {
     max-width: 100% !important;
     max-height: auto !important;
 }
 
+i {
+    color: #00ADB5;
+}
+
+a i:hover {
+    color: #009da5;
+}
+
+/* Buttons */
 .btn {
     background-color: #00ADB5;
-    border: 1px solid #00ADB5;
+    border: 0;
     color: #EEEEEE;
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 1.1rem;
     font-weight: 600;
     letter-spacing: 2px;
-    line-height: 22.5px;
+    line-height: 1.40625rem;
 }
 
 .btn:hover {
     background-color: #009da5;
-    border: 1px solid #009da5;
     color: #EEEEEE;
+}
+
+.btn:focus {
+    background-color: #00ADB5;
+    box-shadow: none;
 }
 
 .btn i {
@@ -52,10 +91,9 @@ nav {
 .navbar-brand span {
     font-size: 1.20rem;
     font-weight: 600;
-    letter-spacing: 0.1rem;
+    letter-spacing: 1px;
 }
 
-/* Nav Dropdown */
 .dropdown-menu {
     border-radius: 0;
 }
@@ -64,24 +102,22 @@ nav {
     font-size: 1.15rem;
     font-weight: 500;
     letter-spacing: 1px;
+    line-height: 1.725rem;
 }
 
 .dropdown-menu li a:hover {
-    background-color: #009da5;
+    background-color: #00ADB5;
     color: #EEEEEE;
 }
 
-
-
-
-/* Login and Sign Up Section */
+/* Login and Register Section */
 .auth-form {
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 1.2rem;
     letter-spacing: 1px;
 }
 
-.auth-form input, .auth-form textarea {
+.auth-form input {
     font-size: 1.1rem;    
     letter-spacing: 1px;
 }
@@ -95,39 +131,19 @@ nav {
     padding: 1.5rem;
 }
 
-#login-section .card-body, #register-section .card-body {
+.auth-form .card-body {
     padding: 3rem;
 }
 
 /* Error Handling */
 .error-handling {
     display: block;    
-    letter-spacing: 0.7px;
+    letter-spacing: 1px;
     margin-top: 1rem;
 }
 
-/* Home Section */
-.home-section h2, .view-post-section h2, .about-section h2 {
-    font-family: 'Barlow Condensed', sans-serif;
-    font-size: 2.25rem;
-    font-weight: 600;
-    line-height: 2.7rem;
-}
-
-.input-subscribe
-{
-    font-size: 0.9rem;
-}
-
-.home-section p {
-    line-height: 1.65rem;
-}
-
- ul {
-    padding-left: 0;
-}
-
-.home-section .post-date, .home-section .post-author {
+/* Home and Blog Section */
+.post-info {
     font-size: 0.9rem;
     font-weight: 500;
     line-height: 23.1px;
@@ -135,7 +151,6 @@ nav {
 
 p.post-body {
     display: -webkit-box;
-    font-family: 'Montserrat', sans-serif;
     --max-lines: 3;
     overflow: hidden;
     -webkit-box-orient: vertical;
@@ -146,22 +161,15 @@ p.post-body {
     opacity: 0.9;
 }
 
-/* Widget */
+/* Home Section Widget */
 .widget {
     margin-bottom: 2rem;
 }
 
 .widget-title {
     border-bottom: 2px solid #00ADB5;
-    padding-bottom: 10px;
     display: inline-block;
-}
-
-.widget h4 {
-    font-family: 'Barlow Condensed', sans-serif;
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: 2.2rem;
+    padding-bottom: 10px;
 }
 
 .twitter-tweet {
@@ -169,15 +177,8 @@ p.post-body {
     margin: auto;
 }
 
-
-/* Make Post */
-
-.make-post-section input, .contact-section input  {
-    border: 0;
-}
-
-.make-post-section input:focus , .contact-section input:focus {
-    box-shadow: 0 2px 0 #00ADB5 !important;
+.input-subscribe {
+    font-size: 0.9rem;
 }
 
 .widget-bg {
@@ -185,46 +186,40 @@ p.post-body {
     background-color: #e7e7e7;
 }
 
+/* Make Post and Contact Section */
+
+#make-post-section input, #contact-section input, #view-post-section input  {
+    border: 0;
+}
+
+#make-post-section input:focus , #contact-section input:focus, #view-post-section input:focus {
+    box-shadow: 0 2px 0 #00ADB5 !important;
+}
+
+#contact-section textarea, #view-post-section textarea {
+    resize: none;
+    border: 0;
+}
+#contact-section textarea:focus, #view-post-section textarea:focus {
+    box-shadow: 0 2px 0 #00ADB5 !important;
+}
+
 #cke_body {
     border: 0;
 }
 
-/* All Comments */
-.comment ul {
-    list-style: none;
-}
+/* Comments */
 .comment img {
     border-color: #00ADB5 !important;
     border-radius: 100%;
     width: 40px;
 }
 
-.comment .sub-text {
-    color: #6b7481;
-    font-size: 0.9rem;
+.sub-text {
+    font-size: 0.875rem;
     font-weight: 500;
 }
 
-/* About */
-.about-section p {
-    line-height: 26.4px;
-}
-
-/* Contact Section */
-.contact-section textarea, .view-post-section textarea {
-    resize: none;
-    border: 0;
-}
-.contact-section textarea:focus, .view-post-section textarea:focus {
-    box-shadow: 0 2px 0 #00ADB5 !important;
-}
-
-.contact-section h1 {
-    font-size: 48px;
-    line-height: 57.6px;
-}
-
-.contact-section p {
-    font-size: 20px;
-    line-height: 30px;
+.comment-text {
+    font-size: 0.875rem;
 }
